Add photos to gallery-x.html pages

--- a/gallery-concerts.html
+++ b/gallery-concerts.html
@@ -40,8 +40,68 @@
 
     <!-- Main Content -->
     <main>
-
-
+        <section class="gallery">
+            <div class="photos">
+                <img src="assets/images/concerts/1.jpg"
+                    alt="Vitória, singer, commands the stage edge, bathed in purple lights, connecting with the audience intimately.">
+                <img src="assets/images/concerts/2.jpg"
+                    alt="AnaVitória Duo graces the stage, adorned in animal costumes, creating a whimsical visual spectacle.">
+                <img src="assets/images/concerts/3.jpg"
+                    alt="Vitória foregrounded, Ana on guitar background, bathed in red spotlights, crafting a vivid and emotive performance.">
+                <img src="assets/images/concerts/4.jpg"
+                    alt="AnaVitória Duo and band, captured frontally, ignite the concert stage with an electrifying musical presence.">
+                <img src="assets/images/concerts/5.jpg"
+                    alt="Djonga, the rapper, dons a contemplative gaze, entranced by the stage's allure and artistic atmosphere.">
+                <img src="assets/images/concerts/6.jpg"
+                    alt="Maria Gadu captivates the audience, hand raised in a poignant moment, her musical prowess on full display.">
+                <img src="assets/images/concerts/7.jpg"
+                    alt="Maria Gadu and Chico César harmonize, guitars in hand, creating a captivating musical synergy.">
+                <img src="assets/images/concerts/8.jpg"
+                    alt="Chico César, a solo act, mesmerizes the audience, skillfully singing and playing the guitar.">
+                <img src="assets/images/concerts/9.jpg"
+                    alt="Elba Ramalho's guitar mastery captivates the crowd, a musical force radiating from the stage.">
+                <img src="assets/images/concerts/10.jpg"
+                    alt="Elba Ramalho delivers a riveting performance, showcasing her musical prowess and stage presence.">
+                <img src="assets/images/concerts/11.jpg"
+                    alt="Josyara commands the stage, her soulful voice filling the air with enchanting melodies.">
+                <img src="assets/images/concerts/12.jpg"
+                    alt="Duda Beat leans her microphone toward the crowd, forging a dynamic connection with her eager audience.">
+                <img src="assets/images/concerts/13.jpg"
+                    alt="Ney Matogrosso, adorned in a golden jumpsuit, captivates the audience against a vibrant blue backdrop.">
+                <img src="assets/images/concerts/14.jpg"
+                    alt="Ney Matogrosso raises his fist against a purple billboard, a powerful moment of expression and energy.">
+                <img src="assets/images/concerts/15.jpg"
+                    alt="Rodrigo, Dead Fish's lead singer, crowd-surfing, embraced by the audience, symbolizing raw musical energy.">
+                <img src="assets/images/concerts/16.jpg"
+                    alt="A fervent audience, foregrounded, revels as Dead Fish takes the stage, bathed in yellow and orange brilliance.">
+                <img src="assets/images/concerts/17.jpg"
+                    alt="Dead Fish delivers a high-octane performance, enveloped in the intensity of dark blue stage lighting.">
+                <img src="assets/images/concerts/18.jpg"
+                    alt="Dead Fish thrives under grey spotlights, delivering a compelling performance with raw, unfiltered energy.">
+                <img src="assets/images/concerts/19.jpg"
+                    alt="Dead Fish commands the stage, bathed in cool light blue hues, delivering a visually stunning performance.">
+                <img src="assets/images/concerts/20.jpg"
+                    alt="Elza Soares dominates the stage, her presence illuminated by a radiant spotlight, captivating the audience.">
+                <img src="assets/images/concerts/21.jpg"
+                    alt="Father John Misty, illuminated by red spotlights, delivers a soul-stirring musical experience.">
+                <img src="assets/images/concerts/22.jpg"
+                    alt="Father John Misty's silhouette, guitar in hand, emerges against a backdrop of purple spotlights, creating a mesmerizing scene.">
+                <img src="assets/images/concerts/23.jpg"
+                    alt="Xênia França captivates the audience under purple spotlights, delivering a soulful and energetic performance.">
+                <img src="assets/images/concerts/24.jpg"
+                    alt="Xênia França dances dynamically in front of an orange billboard, infusing the stage with vibrant energy.">
+                <img src="assets/images/concerts/25.jpg"
+                    alt="Cut Copy Band captivates under cyan spotlights, creating a visually striking and immersive musical experience.">
+                <img src="assets/images/concerts/26.jpg"
+                    alt="Cut Copy Band, under light blue spotlights, crafts an electrifying performance, resonating with the audience.">
+                <img src="assets/images/concerts/27.jpg"
+                    alt="A band logo extends and illuminates under the cool blue lights, symbolizing the musical essence of the performance.">
+                <img src="assets/images/concerts/28.jpg"
+                    alt="Ionnalee's red hair pops against a black billboard backdrop as she mesmerizes, singing and dancing with electrifying energy.">
+                <img src="assets/images/concerts/29.jpg"
+                    alt="Ionnalee graces the stage, black jumpsuit adorned with ethereal veil wings, dancing with enchanting grace and musical prowess.">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
