--- a/gallery-family.html
+++ b/gallery-family.html
@@ -40,8 +40,38 @@
 
     <!-- Main Content -->
     <main>
-
-
+        <section class="gallery">
+            <div class="photos">
+                <img src="assets/images/family/1.jpg"
+                    alt="Expectant mother cradles her belly, holding a tiny cyan crochet shoe, capturing the anticipation of new life.">
+                <img src="assets/images/family/2.jpg"
+                    alt="Pregnant mom embraces her eldest daughter, creating a heartwarming connection as the younger one reaches for her belly.">
+                <img src="assets/images/family/3.jpg"
+                    alt="Beside her pregnant mom's belly, a girl wears a flower crown, symbolizing the blooming of a new family.">
+                <img src="assets/images/family/4.jpg"
+                    alt="Young woman shares laughter with a friend, cradling her baby daughter, a joyful moment frozen in time.">
+                <img src="assets/images/family/5.jpg"
+                    alt="Mother holds her baby daughter against a sunset backdrop, creating a tender tableau of love and warmth.">
+                <img src="assets/images/family/6.jpg"
+                    alt="Parents lovingly cradle twin daughters amid a red rose orchard, a picturesque family scene in nature's embrace.">
+                <img src="assets/images/family/7.jpg"
+                    alt="Eldest daughter serenades her youngest sister, held by their mother, weaving a sweet familial harmony.">
+                <img src="assets/images/family/8.jpg"
+                    alt="Silhouette of a mother lifts her baby against a setting sun, casting a heartwarming glow on their bond.">
+                <img src="assets/images/family/9.jpg"
+                    alt="Mother kisses her baby daughter against a setting sun, a poignant moment encapsulating love's timeless beauty.">
+                <img src="assets/images/family/10.jpg"
+                    alt="Couple's kiss in a waterfall pool, capturing the essence of romance amid the natural splendor.">
+                <img src="assets/images/family/11.jpg"
+                    alt="Playful couple enjoys water's embrace in a waterfall pool, savoring each moment of shared joy.">
+                <img src="assets/images/family/12.jpg"
+                    alt="Daring couple dives into a waterfall pool, embracing the thrill of love amid nature's grandeur.">
+                <img src="assets/images/family/13.jpg"
+                    alt="Young boy, sporting a yellow jacket, leaps into the air, embodying the spirit of youthful energy.">
+                <img src="assets/images/family/14.jpg"
+                    alt="Young boy sits in a blue-themed classroom, surrounded by Easter chocolates, a charming scene of childhood delight.">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
