--- a/gallery-i-events.html
+++ b/gallery-i-events.html
@@ -40,8 +40,48 @@
 
     <!-- Main Content -->
     <main>
-
-
+        <section class="gallery">
+            <div class="photos">
+                <img src="assets/images/i-events/1.jpg"
+                    alt="A man's silhouette faces the lecturer in a sleek modern auditorium, captivated by the engaging presentation.">
+                <img src="assets/images/inst-events/2.jpg"
+                    alt="Executives in luxurious wooden chairs attend a presentation by a suited man, epitomizing professionalism and focus.">
+                <img src="assets/images/inst-events/3.jpg"
+                    alt="Executives converse in a hallway with contrasting dark walls and red spotlights, accentuating the company's vibrant yellow banner.">
+                <img src="assets/images/inst-events/4.jpg"
+                    alt="From above, an empty auditorium features purple spotlights and yellow banners, setting an atmospheric stage for future engagement.">
+                <img src="assets/images/inst-events/5.jpg"
+                    alt="Dark silhouettes of executives converse, centered around the event logo illuminated by bright neon yellow lamps.">
+                <img src="assets/images/inst-events/6.jpg"
+                    alt="Wooden shelves showcase natural soaps and cosmetics, creating a visually appealing display.">
+                <img src="assets/images/inst-events/7.jpg"
+                    alt="A rustic yet elegant wooden table hosts a signed book, capturing the essence of the author's personal touch.">
+                <img src="assets/images/inst-events/8.jpg"
+                    alt="Engrossed reader skims through a recently signed book by the author, immersed in the literary experience">
+                <img src="assets/images/inst-events/9.jpg" alt="Hands write in " HOMENS" book; beside, glasses rest on a
+                    wine glass stem, an out-of-focus phone, and pen linger.">
+                <img src="assets/images/inst-events/10.jpg" alt="Blurred image of a woman writing with " HOMENS" book by
+                    Sylvio Lago displayed, featuring a wine glass on the table.">
+                <img src="assets/images/inst-events/11.jpg" alt="Hand writes in " HOMENS" book by Sylvio Lago with a
+                    green pen, a wine glass, and a blurry background.">
+                <img src="assets/images/inst-events/12.jpg"
+                    alt="Hand signs a book with dedication, revealing a watch and bracelet; a personal touch captured.">
+                <img src="assets/images/inst-events/13.jpg" alt="Indoor garden reflects on glass with " PREMIO ODS PACTO
+                    GLOBAL 2019" text, creating a serene atmosphere.">
+                <img src="assets/images/inst-events/14.jpg" alt="Empty event venue with " A EMPRESA QUE GARANTE BOAS
+                    PRÁTICAS RI" projected on stage and sponsor logos.">
+                <img src="assets/images/inst-events/15.jpg" alt="Staircase leading to a green wall with " PRÊMIO ODS
+                    PACTO GLOBAL 2019" sign, featuring accessibility paving.">
+                <img src="assets/images/inst-events/16.jpg" alt="Woman speaks at lectern with " PRÊMIO ODS PACTO GLOBAL
+                    2019" logo in a conference setting with empty chairs.">
+                <img src="assets/images/inst-events/17.jpg"
+                    alt="Panoramic view of the empty event venue with warm ambient lighting and projected text on stage.">
+                <img src="assets/images/inst-events/18.jpg"
+                    alt="Event space bathed in blue and yellow lighting, neat rows of chairs facing a modern stage with white seating.">
+                <img src="assets/images/inst-events/19.jpg"
+                    alt="Elevated view of an event space, wooden chairs facing a stage with screens displaying text on food producers and family agriculture. Balcony area to the right.">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
