--- a/gallery-solo.html
+++ b/gallery-solo.html
@@ -40,8 +40,60 @@
 
     <!-- Main Content -->
     <main>
-
-
+        <section class="gallery">
+            <div class="photos">
+                <img src="assets/images/solo/1.jpg"
+                    alt="Relaxed man lounges in a beach chair; vibrant graffiti decorates the background, adding a splash of color to relaxation.">
+                <img src="assets/images/solo/2.jpg"
+                    alt="Beach chair relaxation: the laid-back man faces the camera against a lively graffiti backdrop.">
+                <img src="assets/images/solo/3.jpg"
+                    alt="Laidback man perches on the handrail of a '70s-style building, exuding cool vibes.">
+                <img src="assets/images/solo/4.jpg"
+                    alt="Contemplative man faces the urban sprawl in a big city street, lost in introspection.">
+                <img src="assets/images/solo/5.jpg"
+                    alt="Black-clad man stands before a solid wood round church door, embodying timeless style.">
+                <img src="assets/images/solo/6.jpg"
+                    alt="Stylish man in black stands atop a Brazilian flag painted on the street, a bold urban statement.">
+                <img src="assets/images/solo/7.jpg"
+                    alt="Well-dressed man leans against a handrail, a lush green area providing a serene background.">
+                <img src="assets/images/solo/8.jpg"
+                    alt="Well-dressed man sits on stone steps of a '20s-style building, exuding sophistication.">
+                <img src="assets/images/solo/9.jpg"
+                    alt="Stylish man leans against a handrail with a brass-looking viaduct in the background.">
+                <img src="assets/images/solo/10.jpg"
+                    alt="Long-haired woman emerges from a pool, donning a cyan swimsuit, radiating sweet relaxation.">
+                <img src="assets/images/solo/11.jpg"
+                    alt="Adorned with a red hibiscus, a young woman leans against a wooden handrail with elegance.">
+                <img src="assets/images/solo/12.jpg"
+                    alt="Red hibiscus adorning her hair, the young woman faces the camera against a tropical forest backdrop.">
+                <img src="assets/images/solo/13.jpg"
+                    alt="Contemplative gaze: young woman with a red hibiscus faces the camera, forest hues as a serene backdrop.">
+                <img src="assets/images/solo/14.jpg"
+                    alt="Dreamy ambiance: young woman amidst beach chairs and parasols, her contemplative look capturing coastal tranquility.">
+                <img src="assets/images/solo/15.jpg"
+                    alt="Man in black runs his fingers through his hair, facing the camera against a dusk-lit backdrop with a tractor shovel.">
+                <img src="assets/images/solo/16.jpg"
+                    alt="Blurred image: man in a black trench coat on a rusty metallic platform, evoking an enigmatic presence.">
+                <img src="assets/images/solo/17.jpg"
+                    alt="Man walks towards the horizon on red dirt contrasting with light-greenish-blue skies, creating a surreal atmosphere.">
+                <img src="assets/images/solo/18.jpg"
+                    alt="Man partially covered by tall dry grass during dusk, blending into the natural surroundings.">
+                <img src="assets/images/solo/19.jpg"
+                    alt="Bearded man showcases a wild-flower bouquet at a construction site, a touch of nature amid urban development.">
+                <img src="assets/images/solo/20.jpg"
+                    alt="Short-haired girl stretches a facemask in front of her mouth, vibrant clothing matching a cement tennis court.">
+                <img src="assets/images/solo/21.jpg"
+                    alt="Lying on a colorful tennis court, the short-haired girl smiles, blending relaxation with vivid surroundings.">
+                <img src="assets/images/solo/22.jpg"
+                    alt="Short-haired girl, clad in a black leather jacket, stands in a winter field under serene skies.">
+                <img src="assets/images/solo/23.jpg"
+                    alt="Reflection through mirrors captures a short-haired girl facing the horizon, creating a captivating visual.">
+                <img src="assets/images/solo/24.jpg"
+                    alt="Closeup: short-haired girl in a black leather jacket amidst a winter field, a moment frozen in serene solitude.">
+                <img src="assets/images/solo/25.jpg"
+                    alt="Short-haired girl in colorful attire roller skates in a cement tennis court, exuding energy and vibrancy.">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
