--- a/gallery-urban.html
+++ b/gallery-urban.html
@@ -40,7 +40,48 @@
 
     <!-- Main Content -->
     <main>
-
+        <section class="gallery">
+            <div class="photos">
+                <img src="assets/images/urban/1.jpg"
+                    alt="Urban Canyon: A city highway slices through towering buildings adorned with murals, the empty road under a clear sky.">
+                <img src="assets/images/urban/2.jpg"
+                    alt="Nighttime Grilling: Red-clad street vendor tends skewers amidst rising smoke, partially veiling their face in the night hustle.">
+                <img src="assets/images/urban/3.jpg"
+                    alt="Patchwork Facade: Apartment building exterior reveals a patchwork of windows and balconies, each offering a glimpse into private lives.">
+                <img src="assets/images/urban/4.jpg"
+                    alt="Twilight Edifice: Towering skyscraper illuminates against the darkening sky, lights twinkling, a beacon amid the encroaching night.">
+                <img src="assets/images/urban/5.jpg"
+                    alt="Urban Mosaic: Evening light highlights a building mural amid city lights, forming an intricate mosaic against neighboring structures.">
+                <img src="assets/images/urban/6.jpg"
+                    alt="Reflections and Curves:Modern building's curved reflective surface captures sky and city, juxtaposing fluid reflections with architectural solidity.">
+                <img src="assets/images/urban/7.jpg"
+                    alt="Urban Fabric: High-rise side displays repeating window pattern against overcast sky, creating a textured urban tapestry.">
+                <img src="assets/images/urban/8.jpg"
+                    alt="Rainy Day Wait: Figures wait at a bus stop, rain-spattered glass distorting the urban backdrop, capturing the essence of a passing bus.">
+                <img src="assets/images/urban/9.jpg"
+                    alt="Forgotten Corner: Neglected space in an industrial area with a worn door and scattered debris, telling tales of neglect.">
+                <img src="assets/images/urban/10.jpg"
+                    alt="Industrial Solitude: Lone worker operates machinery in a quiet factory setting, surrounded by the stillness of the warehouse.">
+                <img src="assets/images/urban/11.jpg"
+                    alt="Workshop Haze: Inside an industrial workshop, smoke gently rises, adding an air of mystery to the calm work environment.">
+                <img src="assets/images/urban/12.jpg"
+                    alt="Time-Worn Gear: Close-up of a rusty mechanical gear, a relic of old industry, now silent and motionless.">
+                <img src="assets/images/urban/13.jpg"
+                    alt="Leathers in Repose: Tanned leather pieces laid out on a table, revealing the tools and materials of a leatherworking workshop.">
+                <img src="assets/images/urban/14.jpg"
+                    alt="Civic Pride: Palestinian flag waves before a historic obelisk, a dynamic display of national pride under a bright sky.">
+                <img src="assets/images/urban/15.jpg"
+                    alt="Spiral Harmony: Innovative look up a modern staircase forms a mesmerizing loop against the sky, blending man-made and natural aesthetics.">
+                <img src="assets/images/urban/16.jpg"
+                    alt="Telephone Tales: Candid moment with oversized public telephone receivers, orange and blue, offering a colorful commentary on communication.">
+                <img src="assets/images/urban/17.jpg"
+                    alt="Dusk Palette: City at dusk, golden light graces buildings, casting shadows, and painting the scene with warm hues.">
+                <img src="assets/images/urban/18.jpg"
+                    alt="Enchanting Bubble: Soap bubble in a cityscape reflects the world in a transient, kaleidoscopic surface.">
+                <img src="assets/images/urban/19.jpg"
+                    alt="Traditional Dance: Vibrant depiction of cultural dance blurs performers into a purple flurry, bridging the physical and mystical realms.">
+            </div>
+        </section>
 
     </main>
 
