--- a/gallery-weddings.html
+++ b/gallery-weddings.html
@@ -40,8 +40,64 @@
 
     <!-- Main Content -->
     <main>
-
-
+        <section class="gallery">
+            <div class="photos">
+                <img src="assets/images/weddings/1.jpg"
+                    alt="Intimate dance: bride and groom, enveloped by floral décor, share a moment of pure connection.">
+                <img src="assets/images/weddings/2.jpg"
+                    alt="Champagne toasts echo joy as the bride and groom celebrate, surrounded by beautiful flower arrangements.">
+                <img src="assets/images/weddings/3.jpg"
+                    alt="Newlyweds proudly display their wedding bands, symbols of eternal commitment and love.">
+                <img src="assets/images/weddings/4.jpg"
+                    alt="Leaving the register’s office, the bride cradles flowers, a bouquet embodying the start of marital bliss.">
+                <img src="assets/images/weddings/5.jpg"
+                    alt="Joyful waves to godparents in the register’s office, capturing a moment of gratitude and happiness.">
+                <img src="assets/images/weddings/6.jpg"
+                    alt="Vows spoken with love: the bride and groom embark on their journey, sealed with promises and commitment.">
+                <img src="assets/images/weddings/7.jpg"
+                    alt="Intimate moment amidst the wedding party: bride and groom share laughter, surrounded by the warmth of loved ones.">
+                <img src="assets/images/weddings/8.jpg"
+                    alt="Celebratory embrace: bride and groom revel with guests, a tree adorned with lanterns framing their joy.">
+                <img src="assets/images/weddings/9.jpg"
+                    alt="Nighttime magic unfolds at an open-air wedding, a grand tree aglow with yellow lanterns illuminating the celebration.">
+                <img src="assets/images/weddings/10.jpg"
+                    alt="The open-air aisle frames the bride and groom, a natural setting for their union amid heartfelt celebration.">
+                <img src="assets/images/weddings/11.jpg"
+                    alt="Adorned by flowers, the bride walks the aisle, accompanied by her father, creating a timeless scene.">
+                <img src="assets/images/weddings/12.jpg"
+                    alt="Aerial view captures the open-air altar, chairs poised for a beautiful ceremony in the embrace of nature.">
+                <img src="assets/images/weddings/13.jpg"
+                    alt="Chairs and floral arrangements set the stage for a romantic and enchanting wedding ceremony.">
+                <img src="assets/images/weddings/14.jpg"
+                    alt="Elegance in simplicity: golden cutlery and plates arranged on a table, bathed in the soft glow of candlelight.">
+                <img src="assets/images/weddings/15.jpg"
+                    alt="Whipped cream wedding cake and fine chocolates displayed on golden platters, a feast for the senses.">
+                <img src="assets/images/weddings/16.jpg"
+                    alt="Tempting delights: whipped cream wedding cake and fine chocolates presented on golden platters, indulging the celebration.">
+                <img src="assets/images/weddings/17.jpg"
+                    alt="Fine wedding chocolates grace a wooden table, a delectable display for guests to savor.">
+                <img src="assets/images/weddings/18.jpg"
+                    alt="Harmonious trio: flower arrangements, wedding cake, and fine chocolates converge in a captivating visual feast.">
+                <img src="assets/images/weddings/19.jpg"
+                    alt="Rustic charm exudes from the bride's bouquet, a collection of field flowers elevating her bridal ensemble.">
+                <img src="assets/images/weddings/20.jpg"
+                    alt="Front of the register’s office, bride and groom celebrate their union, a joyous start to marital bliss.">
+                <img src="assets/images/weddings/21.jpg"
+                    alt="Complete with their beloved pet dog, bride and groom share the joy of their wedding day.">
+                <img src="assets/images/weddings/22.jpg"
+                    alt="Delectable treats abound: walnuts and whipped wedding cream cake, surrounded by an array of fine sweets.">
+                <img src="assets/images/weddings/23.jpg"
+                    alt="Intimate moment shared before the party: bride and groom bask in the anticipation of their celebration.">
+                <img src="assets/images/weddings/24.jpg"
+                    alt="Holding hands, the bride and groom radiate love, her diamond-studded wedding band capturing the sparkle of commitment.">
+                <img src="assets/images/weddings/25.jpg"
+                    alt="A kiss shared in front of the table adorned with the wedding cake and fine sweets, sealing their love.">
+                <img src="assets/images/weddings/26.jpg"
+                    alt="Exchange of wedding bands symbolizes the unity and commitment between the bride and groom.">
+                <img src="assets/images/weddings/27.jpg"
+                    alt="A garden backdrop sets the scene for a tender kiss between the bride and groom, surrounded by natural beauty.">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
