--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="website logo" width="168.75" height="51.30">
+            <img src="assets/images/logo.png" alt="website logo" width="169" height="51">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -40,8 +40,7 @@
 
     <!-- Main Content -->
     <main>
-        <section id="hero"
-            alt="Shirtless man dancing at a concert, surrounded by a crowd, with purple and blue spotlights illuminating the background.">
+        <section id="hero">
             <div id="cover-text">
                 <h3>Freelance Professional</h3>
                 <h2>Photographer +</h2>
@@ -100,7 +99,8 @@
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
                     <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
                             aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
-                                class="fa-brands fa-square-youtube"></i></i></a></li>
+                                class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
             </div>
         </div>
     </footer>
