--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="website logo" width="168.75" height="51.30">
+            <img src="assets/images/logo.png" alt="website logo" width="169" height="51">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -76,7 +76,7 @@
         </section>
         <section id="partners">
             <div>
-                <h2>Partners<h2>
+                <h2>Partners</h2>
             </div>
             <div id="logo-flex">
                 <div>
@@ -142,10 +142,10 @@
                             target="_blank" rel="noopener"
                             aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
-                    <li><a href="https://www.youtube.com/@felipegiubilei"
-                            target="_blank" rel="noopener"
+                    <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
                             aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
-                            class="fa-brands fa-square-youtube"></i></i></a></li>
+                                class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
             </div>
         </div>
     </footer>
