Fix remaining  errors w3 html validator for contact.html

--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@
                 <h3>Get in Touch!</h3>
                 <form action="https://formsubmit.co/5704b3c0f00f7b70781c4a6e30ca2640" method="POST">
                     <label for="full-name">Name:</label><br>
-                    <input type="text" class="form-single" name="full-name" placeholder="Your Name" required><br>
+                    <input type="text" class="form-single" id="full-name" name="full-name" placeholder="Your Name" required><br>
                     <label for="contact-subject">Subject:</label><br>
-                    <input type="text" class="form-single" name="contact-subject" placeholder="Subject" required><br>
+                    <input type="text" class="form-single" id="contact-subject" name="contact-subject" placeholder="Subject" required><br>
                     <label for="personal-email">E-mail:</label><br>
-                    <input type="email" class="form-single" name="personal-email" placeholder="email@example.com" required><br>
+                    <input type="email" class="form-single" id="personal-email" name="personal-email" placeholder="email@example.com" required><br>
                     <label for="your-message">Message:</label><br>
-                    <textarea class="form-box" name="your-message" maxlength="500"
+                    <textarea class="form-box" id="your-message" name="your-message" maxlength="500"
                         placeholder="Book a session or just leave a comment!" required></textarea><br>
                     <input type="submit" class="contact-button" value="Send!">
                     <input type="reset" class="contact-button" value="Reset">
