Fix errors w3 html validator for gallery-urban.hmtl, gallery-solo.html, gallery-urban.html, gallery-weddings.html, and galllery-video.html, also fix manifest error on all pages.

--- a/gallery-i-events.html
+++ b/gallery-i-events.html
@@ -17,14 +17,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!-- Style -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/favicon/site.webmanifest">
 </head>
 
 <body>
     <!-- Header -->
     <header>
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="website logo" width="168.75" height="51.30">
+            <img src="assets/images/logo.png" alt="website logo" width="169" height="51">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -58,22 +58,22 @@
                     alt="A rustic yet elegant wooden table hosts a signed book, capturing the essence of the author's personal touch.">
                 <img src="assets/images/inst-events/8.jpg"
                     alt="Engrossed reader skims through a recently signed book by the author, immersed in the literary experience">
-                <img src="assets/images/inst-events/9.jpg" alt="Hands write in " HOMENS" book; beside, glasses rest on a
+                <img src="assets/images/inst-events/9.jpg" alt="Hands write in HOMENS book; beside, glasses rest on a
                     wine glass stem, an out-of-focus phone, and pen linger.">
-                <img src="assets/images/inst-events/10.jpg" alt="Blurred image of a woman writing with " HOMENS" book by
+                <img src="assets/images/inst-events/10.jpg" alt="Blurred image of a woman writing with HOMENS book by
                     Sylvio Lago displayed, featuring a wine glass on the table.">
-                <img src="assets/images/inst-events/11.jpg" alt="Hand writes in " HOMENS" book by Sylvio Lago with a
+                <img src="assets/images/inst-events/11.jpg" alt="Hand writes in HOMENS book by Sylvio Lago with a
                     green pen, a wine glass, and a blurry background.">
                 <img src="assets/images/inst-events/12.jpg"
                     alt="Hand signs a book with dedication, revealing a watch and bracelet; a personal touch captured.">
-                <img src="assets/images/inst-events/13.jpg" alt="Indoor garden reflects on glass with " PREMIO ODS PACTO
-                    GLOBAL 2019" text, creating a serene atmosphere.">
-                <img src="assets/images/inst-events/14.jpg" alt="Empty event venue with " A EMPRESA QUE GARANTE BOAS
-                    PRÁTICAS RI" projected on stage and sponsor logos.">
-                <img src="assets/images/inst-events/15.jpg" alt="Staircase leading to a green wall with " PRÊMIO ODS
-                    PACTO GLOBAL 2019" sign, featuring accessibility paving.">
-                <img src="assets/images/inst-events/16.jpg" alt="Woman speaks at lectern with " PRÊMIO ODS PACTO GLOBAL
-                    2019" logo in a conference setting with empty chairs.">
+                <img src="assets/images/inst-events/13.jpg" alt="Indoor garden reflects on glass with PREMIO ODS PACTO
+                    GLOBAL 2019 text, creating a serene atmosphere.">
+                <img src="assets/images/inst-events/14.jpg" alt="Empty event venue with A EMPRESA QUE GARANTE BOAS
+                    PRÁTICAS RI projected on stage and sponsor logos.">
+                <img src="assets/images/inst-events/15.jpg" alt="Staircase leading to a green wall with PRÊMIO ODS
+                    PACTO GLOBAL 2019 sign, featuring accessibility paving.">
+                <img src="assets/images/inst-events/16.jpg" alt="Woman speaks at lectern with PRÊMIO ODS PACTO GLOBAL
+                    2019 logo in a conference setting with empty chairs.">
                 <img src="assets/images/inst-events/17.jpg"
                     alt="Panoramic view of the empty event venue with warm ambient lighting and projected text on stage.">
                 <img src="assets/images/inst-events/18.jpg"
@@ -109,7 +109,8 @@
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
                     <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
                             aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
-                                class="fa-brands fa-square-youtube"></i></i></a></li>
+                                class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
             </div>
         </div>
     </footer>
