--- a/gallery-solo.html
+++ b/gallery-solo.html
@@ -17,14 +17,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!-- Style -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/favicon/site.webmanifest">
 </head>
 
 <body>
     <!-- Header -->
     <header>
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="website logo" width="168.75" height="51.30">
+            <img src="assets/images/logo.png" alt="website logo" width="169" height="51">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -121,7 +121,8 @@
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
                     <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
                             aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
-                                class="fa-brands fa-square-youtube"></i></i></a></li>
+                                class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
             </div>
         </div>
     </footer>
