--- a/gallery-video.html
+++ b/gallery-video.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header>
         <a href="index.html">
-            <img src="assets/images/logo.png" alt="website logo" width="168.75" height="51.30">
+            <img src="assets/images/logo.png" alt="website logo" width="169" height="51">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
@@ -43,7 +43,7 @@
         <div id="video-container">
             <div class="video-frame">
                 <iframe class="video-window" src="https://www.youtube.com/embed/zk1ShvzaXj8?si=FnvhnAOWddE0Yl8o"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
                 <h2>Short-Film: Paralisia (Paralysis)</h2>
@@ -51,7 +51,7 @@
 
             <div class="video-frame">
                 <iframe class="video-window" src="https://www.youtube.com/embed/k0SgqG-kU5Q?si=4L29ZydIprd5I49Y"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
                 <h2>Short-Film: Café</h2>
@@ -59,7 +59,7 @@
 
             <div class="video-frame">
                 <iframe class="video-window" src="https://www.youtube.com/embed/I52Czcx4T_M?si=L39DPGX1AivfDyaq"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
                 <h2>Institutional Video: Inkasa Shushi Garden</h2>
@@ -67,7 +67,7 @@
 
             <div class="video-frame">
                 <iframe class="video-window" src="https://www.youtube.com/embed/VZ0tgIJbOh4?si=C6Y7IHxtJL0g8VgZ"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
                 <h2>Institutional Video: Casa Café Brasil</h2>
@@ -75,7 +75,7 @@
 
             <div class="video-frame">
                 <iframe class="video-window" src="https://www.youtube.com/embed/D7X6BZ2BGSs?si=YDqJQfXcosBgRPO_"
-                    title="YouTube video player" frameborder="0"
+                    title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
                 <h2>Short-Film: A Chuva, o Sol e o Futebol (The Rain, The Sun and Soccer)</h2>
@@ -108,7 +108,8 @@
                                 class="fa-brands fa-square-x-twitter"></i></a></li>
                     <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
                             aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
-                                class="fa-brands fa-square-youtube"></i></i></a></li>
+                                class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
             </div>
         </div>
     </footer>
