--- a/about.html
+++ b/about.html
@@ -41,37 +41,40 @@
     <!-- Main Content -->
     <main>
         <section id="about-container">
-            <div>
-                <img id="about-image" src="assets/images/about-img.jpg" alt="Photographer's picture holding a camera">
-            </div>
-            <div id="about-text-box">
-                <p class="about-text"> Felipe Giubilei, a highly skilled and trendsetting professional in the dynamic
-                    world
-                    of audiovisuals, boasts an impressive journey.
-                    Kicked off as a Cinematographer and Editor at TV Paraíso (2010-2011), honing those essential
-                    skills.</p>
+            <div id="about-background">
+                <div>
+                    <img id="about-image" src="assets/images/about-img.jpg"
+                        alt="Photographer's picture holding a camera">
+                </div>
+                <div id="about-text-box">
+                    <p class="about-text"> Felipe Giubilei, a highly skilled and trendsetting professional in the
+                        dynamic
+                        world of audiovisuals, boasts an impressive journey.
+                        Kicked off as a Cinematographer and Editor at TV Paraíso (2010-2011), honing those essential
+                        skills.</p>
 
-                <p class="about-text">Showed off his flair for versatility and leadership as a Cinematographer and
-                    Producer
-                    at PUC-TV Minas (2015-2016), levelling up at Escola Livre de Cinema de BH in 2016, blending theory
-                    and
-                    hands-on expertise. Thrived as a Freelance Photographer and Videomaker for Cruzeiro Esporte Clube
-                    (Jan
-                    2015 - Dec 2016).
-                    From 2017 to 2020, was behind the lens for live shows at Casa Natura Musical, seizing those historic
-                    moments.</p>
+                    <p class="about-text">Showed off his flair for versatility and leadership as a Cinematographer and
+                        Producer at PUC-TV Minas (2015-2016), levelling up at Escola Livre de Cinema de BH in 2016,
+                        blending theory
+                        and hands-on expertise. Thrived as a Freelance Photographer and Videomaker for Cruzeiro Esporte
+                        Clube
+                        (Jan 2015 - Dec 2016). From 2017 to 2020, was behind the lens for live shows at Casa Natura
+                        Musical, seizing those historic moments.</p>
 
-                <p class="about-text">Left his creative imprint as a Still Photographer in the 2019 feature film
-                    "SOCIALMENTE" by Leandro D'errico and as a Cinematographer in the documentary "Amazônia Samba" (TV
-                    Cultura)
-                    in the same year.
-                    Recently donned the hats of Director and Screenwriter for the trendy short film "PARALISIA" (2021),
-                    flexing
-                    his prowess in crafting and executing cinematic wonders.</p>
+                    <p class="about-text">Left his creative imprint as a Still Photographer in the 2019 feature film
+                        "SOCIALMENTE" by Leandro D'errico and as a Cinematographer in the documentary "Amazônia Samba"
+                        (TV
+                        Cultura) in the same year.
+                        Recently donned the hats of Director and Screenwriter for the trendy short film "PARALISIA"
+                        (2021),
+                        flexing his prowess in crafting and executing cinematic wonders.</p>
 
-                <p class="about-text">Successfully connecting hands-on experience with academic brilliance, Felipe, a
-                    dedicated and versatile pro in the audiovisual scene, proudly stacks up over 100 photoshoots in his
-                    impressive portfolio.</p>
+                    <p class="about-text">Successfully connecting hands-on experience with academic brilliance, Felipe,
+                        a
+                        dedicated and versatile pro in the audiovisual scene, proudly stacks up over 100 photoshoots in
+                        his
+                        impressive portfolio.</p>
+                </div>
             </div>
         </section>
         <section id="partners">
