--- a/about.html
+++ b/about.html
@@ -50,30 +50,35 @@
                     <p class="about-text"> Felipe Giubilei, a highly skilled and trendsetting professional in the
                         dynamic
                         world of audiovisuals, boasts an impressive journey.
-                        Kicked off as a Cinematographer and Editor at TV Paraíso (2010-2011), honing those essential
+                        Kicked off as a <strong>Cinematographer</strong> and <strong>Editor</strong> at TV Paraíso
+                        (2010-2011), honing those essential
                         skills.</p>
 
-                    <p class="about-text">Showed off his flair for versatility and leadership as a Cinematographer and
-                        Producer at PUC-TV Minas (2015-2016), levelling up at Escola Livre de Cinema de BH in 2016,
+                    <p class="about-text">Showed off his flair for versatility and leadership as a
+                        <strong>Cinematographer</strong> and
+                        <strong>Producer</strong> at PUC-TV Minas (2015-2016), levelling up at Escola Livre de Cinema de
+                        BH in 2016,
                         blending theory
-                        and hands-on expertise. Thrived as a Freelance Photographer and Videomaker for Cruzeiro Esporte
+                        and hands-on expertise. Thrived as a <strong>Freelance Photographer</strong> and
+                        <strong>Videographer</strong> for Cruzeiro Esporte
                         Clube
                         (Jan 2015 - Dec 2016). From 2017 to 2020, was behind the lens for live shows at Casa Natura
-                        Musical, seizing those historic moments.</p>
+                        Musical, seizing those historic moments.
+                    </p>
 
-                    <p class="about-text">Left his creative imprint as a Still Photographer in the 2019 feature film
+                    <p class="about-text">Left his creative imprint as a <strong>Still Photographer</strong> in the 2019
+                        feature film
                         "SOCIALMENTE" by Leandro D'errico and as a Cinematographer in the documentary "Amazônia Samba"
                         (TV
                         Cultura) in the same year.
-                        Recently donned the hats of Director and Screenwriter for the trendy short film "PARALISIA"
+                        Recently donned the hats of <strong>Director</strong> and <strong>Screenwriter</strong> for the
+                        trendy <strong>short film "PARALISIA"</strong>
                         (2021),
                         flexing his prowess in crafting and executing cinematic wonders.</p>
 
                     <p class="about-text">Successfully connecting hands-on experience with academic brilliance, Felipe,
-                        a
-                        dedicated and versatile pro in the audiovisual scene, proudly stacks up over 100 photoshoots in
-                        his
-                        impressive portfolio.</p>
+                        a dedicated and versatile pro in the audiovisual scene, proudly stacks up over <strong>100
+                            photoshoots</strong> in his impressive portfolio.</p>
                 </div>
             </div>
         </section>
