--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer>
         <div id="social-container">
             <div>
-                <p>Check out my social media!</p>
+                <span>Check out my social media!</span>
             </div>
             <div>
                 <ul id="social-networks">
