Add 404 error page

--- a/404.html
+++ b/404.html
@@ -34,21 +34,12 @@
     </header>
 
     <main>
-        <div class="form-background">
-            <div id="form-container">
-                <h3>Get in Touch!</h3>
-                <form action="https://formsubmit.co/5704b3c0f00f7b70781c4a6e30ca2640" method="POST">
-                    <label for="full-name">Name:</label><br>
-                    <input type="text" class="form-single" id="full-name" name="full-name" placeholder="Your Name" required><br>
-                    <label for="contact-subject">Subject:</label><br>
-                    <input type="text" class="form-single" id="contact-subject" name="contact-subject" placeholder="Subject" required><br>
-                    <label for="personal-email">E-mail:</label><br>
-                    <input type="email" class="form-single" id="personal-email" name="personal-email" placeholder="email@example.com" required><br>
-                    <label for="your-message">Message:</label><br>
-                    <textarea class="form-box" id="your-message" name="your-message" maxlength="500"
-                        placeholder="Book a session or just leave a comment!" required></textarea><br>
-                    <input type="submit" class="contact-button" value="Send!">
-                    <input type="reset" class="contact-button" value="Reset">
+        <div id="error-404-background">
+            <div id="error-404-text">
+                    <h1>Error 404</h1>
+                    <h2>Oops! Something went wrong!</h2>
+                    <a href="index.html"><button id="error-button" type="button">Take me home!</button></a>
+                </div>
                 </form>
             </div>
         </div>
