--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
     </header>
 
     <main>
-        <div class="form-background">
+        <div id="form-background">
             <div id="form-container">
                 <h3>Get in Touch!</h3>
-                <form action="https://formsubmit.co/5704b3c0f00f7b70781c4a6e30ca2640" method="POST">
+                <form action="https://formdump.codeinstitute.net/" method="POST">
                     <label for="full-name">Name:</label><br>
                     <input type="text" class="form-single" id="full-name" name="full-name" placeholder="Your Name" required><br>
                     <label for="contact-subject">Subject:</label><br>
