Replace dump code institute form for thank-you url

--- a/404.html
+++ b/404.html
@@ -34,8 +34,8 @@
     </header>
 
     <main>
-        <div id="error-404-background">
-            <div id="error-404-text">
+        <div class="error-404-background">
+            <div class="error-404-text">
                     <h1>Error 404</h1>
                     <h2>Oops! Something went wrong!</h2>
                     <a href="index.html"><button id="error-button" type="button">Take me home!</button></a>
