--- a/thank-you.html
+++ b/thank-you.html
@@ -8,6 +8,7 @@
         content="Felipe Giubilei. Photographer and Videographer, São Paulo, Belo Horizonte, Brazil">
     <meta name="keywords"
         content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
+    <meta http-equiv="refresh" content="10" url="index.html">
     <title>F. Giubilei | Photographer + Videographer</title>
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -34,26 +35,12 @@
     </header>
 
     <main>
-        <div id="form-background">
-            <div id="form-container">
-                <h3>Get in Touch!</h3>
-                <form action="thank-you.html" method="url">
-                    <label for="full-name">Name:</label><br>
-                    <input type="text" class="form-single" id="full-name" name="full-name" placeholder="Your Name"
-                        required><br>
-                    <label for="contact-subject">Subject:</label><br>
-                    <input type="text" class="form-single" id="contact-subject" name="contact-subject"
-                        placeholder="Subject" required><br>
-                    <label for="personal-email">E-mail:</label><br>
-                    <input type="email" class="form-single" id="personal-email" name="personal-email"
-                        placeholder="email@example.com" required><br>
-                    <label for="your-message">Message:</label><br>
-                    <textarea class="form-box" id="your-message" name="your-message" maxlength="500"
-                        placeholder="Book a session or just leave a comment!" required></textarea><br>
-                    <input type="submit" class="contact-button" value="Send!">
-                    <input type="reset" class="contact-button" value="Reset">
-                </form>
+        <div class="error-404-background">
+            <div class="error-404-text">
+                <h2>Thank you for contacting me!</h2>
             </div>
+            </form>
+        </div>
         </div>
     </main>
 
